Fix div overflow (#2095)

--- a/app/style/TxHistory.less
+++ b/app/style/TxHistory.less
@@ -43,14 +43,8 @@
   padding-top: 12px;
 }
 
-.tx-history-row-wrapper {
-  float: left;
-  width: 100%;
-}
-
 .is-overview-pending {
   display: flex;
-  flex-direction: row !important;
 }
 
 .is-row-pending {
@@ -58,12 +52,13 @@
 }
 
 .tx-history-row {
-  padding: 18px 15px 9px 16px;
+  padding: 16px 20px 9px 10px;
   border-bottom: 1px solid var(--disabled-background-color);
   background-color: var(--background-back-color);
   cursor: pointer;
   transition: all 100ms cubic-bezier(0.86, 0, 0.07, 1) 0s;
-  height: 30px;
+  height: 32px;
+  width: 287px;
 }
 
 .tx-history-row:hover {
@@ -76,7 +71,6 @@
   height: 20px;
   background-repeat: no-repeat;
   background-size: 20px 20px;
-  margin-right: 15px;
 }
 
 .tx-history-row.Send .icon {
@@ -132,8 +126,9 @@
 }
 
 .transaction-status {
-  padding: 1px 0px 0px 0px;
+  padding-top: 1px;
   text-align: right;
+  flex-grow: 2;
 }
 
 .transaction-time-date {
@@ -146,6 +141,7 @@
 
 .transaction-time-date-spacer {
   float: right;
+  margin-left: 53px;
   font-size: 11px;
 }
 
@@ -160,18 +156,16 @@
 }
 
 .transaction-amount-number {
-  float: left;
   font-size: 18px;
   font-weight: 600;
   min-width: 120px;
   vertical-align: top;
+  margin-left: 10px;
 }
 
 .transaction-stake-type {
-  display: inline-block;
-  min-width: 120px;
-  vertical-align: top;
-  padding: 4px 0px 0px 0px;
+  margin-left: 10px;
+  padding-top: 4px;
 }
 
 .transaction-amount-hash {
@@ -184,34 +178,25 @@
   white-space: nowrap;
   position: absolute;
   max-width: 100px;
-  margin: 22px 0px 0px 35px;
+  margin-left: 34px;
 }
 
-.stake-transaction-ticket-price {
-  margin-right: 20px;
-  color: var(--disabled-color);
-}
 
 .transaction-stake-type-overview {
-  float: left;
   font-family: @font-family-regular;
   color: var(--input-color-default);
   font-size: 15px;
   font-weight: 600;
-}
-
-.transaction-stake-info-overview {
-  float: left;
+  margin-left: 22px;
 }
 
 .transaction-info-price-reward {
-  position: absolute;
+  display: flex;
   font-family: @font-family-monospaced;
-  color: var(--stroke-color-hovered);
+  color: var(--disabled-color);
   font-size: 12px;
-  margin-top: 16px;
-  margin-left: 35px;
-  width: 290px;
+  margin-left: 42px;
+  width: 270px;
 }
 
 .stake-transaction-ticket-reward {
@@ -220,7 +205,7 @@
   background-size: 11px 11px;
   background-position: 0px 4px;
   padding-left: 16px;
-  color: var(--disabled-color);
+  margin-left: 50px;
 }
 
 .transaction-info-overview-days-to-vote {
@@ -228,31 +213,17 @@
   background-repeat: no-repeat;
   background-size: 12px 12px;
   background-position: 0px 4px;
-  position: fixed;
-  right: 121px;
-  margin-top: -15px;
-  text-align: right;
   padding-left: 14px;
+  margin-left: 10px;
 }
 
 .history-content-nest {
-  .tx-history-row-wrapper {
-    display: flex;
-    flex-direction: column;
-    float: none;
-  }
-
   .tx-history-row {
-    display: flex;
     flex-basis: 80%;
     justify-content: space-between;
     line-height: 12px;
     height: 32px;
     width: 100%;
-  }
-
-  .transaction-info {
-    flex-grow: 2;
   }
 
   .transaction-time.date-spacer {
@@ -262,4 +233,9 @@
   .transaction-time-date-spacer {
     width: 20%;
   }
+}
+
+.transaction-info-row {
+  display: flex;
+  flex-grow: 2;
 }
